objects/pi__AsyncRequest__c.object
<CustomObject>
    <fields>
        <fullName>pi__AsyncType__c</fullName>
        <label>AsyncType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                    <default>true</default>
                    <label>Default</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pi__Params__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Params</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__Repeat_Type__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Repeat Type</label>
        <precision>1</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pi__RequestId__c</fullName>
        <description>Unique ID of the request</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Request ID</label>
        <length>45</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__Scheduled_Time__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Scheduled Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <label>AsyncRequest</label>
    <nameField>
        <displayFormat>AR-{0000}</displayFormat>
        <label>AsyncRequest</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AsyncRequests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>